Fix positions
*Fix overlaping elements

*Fix logo

--- a/static/styles.css
+++ b/static/styles.css
@@ -42,7 +42,7 @@ header {
     height: 120px;
     justify-content: space-between;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 header h1 {
@@ -71,11 +71,8 @@ header h1 {
 
 .logo {
     font-size: 24px;
-    font-weight: 900;
-    left: 35px;
-    position: absolute;
-    top: 50px;
-    z-index: 3;
+    font-weight: bold;
+    display: none;
 }
 
 .logo__link {
@@ -105,7 +102,7 @@ nav {
     grid-row-end: -1;
     justify-content: center;
     width: 250px;
-    z-index: 2;
+    z-index: 3;
 }
 
 .navbar {
@@ -117,6 +114,18 @@ nav {
 }
 
 .navbar__header {
+    font-size: 24px;
+    height: 100px;
+    left: 40px;
+    position: absolute;
+    top: 50px;
+}
+
+.navbar__logo {
+    font-weight: bold;
+}
+
+.navbar__close {
     display: none;
 }
 
@@ -471,11 +480,11 @@ form {
 
     .logo,
     .toggle-menu {
+        display: block;
         position: absolute;
     }
 
     .toggle-menu {
-        display: block;
         height: 20px;
         left: 30px;
         top: 40px;
@@ -533,11 +542,9 @@ form {
     .navbar__header {
         align-items: center;
         display: flex;
-        font-size: 24px;
-        height: 100px;
         justify-content: space-between;
-        grid-template-columns: 4fr 1fr;
         margin-bottom: 20px;
+        position: static;
     }
 
     .navbar__close,
@@ -580,11 +587,6 @@ form {
         width: 100%;
     }
 
-    .alert {
-        position: sticky;
-        top: 100px;
-    }
-
     .settings__password,
     .settings__delete {
         font-size: 24px;
@@ -594,6 +596,10 @@ form {
 }
 
 @media (max-width: 768px) {
+    header h1 {
+        display: none;
+    }
+    
     nav {
         width: 100%;
     }
@@ -611,11 +617,6 @@ form {
 }
 
 @media (max-width: 576px) {
-
-    header h1 {
-        display: none;
-    }
-
     .button {
         margin: 20px 0;
         width: 80%;
